[gd_scene load_steps=19 format=3 uid="uid://bjkkppsyrards"]

[ext_resource type="Resource" path="res://example/dynamic_wheel/upgrades/up_magic.tres" id="1"]
[ext_resource type="Resource" path="res://example/dynamic_wheel/upgrades/weapon_fireball.tres" id="2"]
[ext_resource type="Resource" path="res://example/dynamic_wheel/upgrades/up_strength.tres" id="3"]
[ext_resource type="Resource" path="res://example/dynamic_wheel/upgrades/weapon_giga_sword.tres" id="4"]
[ext_resource type="Resource" path="res://example/dynamic_wheel/upgrades/mastery strength.tres" id="5"]
[ext_resource type="Resource" path="res://example/dynamic_wheel/upgrades/weapon_lightning.tres" id="6"]
[ext_resource type="Resource" path="res://example/dynamic_wheel/upgrades/weapon_spear.tres" id="7"]
[ext_resource type="Resource" path="res://example/dynamic_wheel/upgrades/elemental.tres" id="8"]
[ext_resource type="Resource" path="res://example/dynamic_wheel/upgrades/weapon_chaos_blast.tres" id="9"]
[ext_resource type="Resource" path="res://example/dynamic_wheel/upgrades/weapon_dagger.tres" id="10"]
[ext_resource type="Resource" path="res://example/dynamic_wheel/upgrades/ice_and_fire.tres" id="11"]
[ext_resource type="Resource" path="res://example/dynamic_wheel/upgrades/up_aoe.tres" id="12"]
[ext_resource type="Resource" path="res://example/dynamic_wheel/upgrades/health.tres" id="13"]
[ext_resource type="Resource" path="res://example/dynamic_wheel/upgrades/weapon_axe.tres" id="14"]
[ext_resource type="Resource" path="res://example/dynamic_wheel/upgrades/weapon_blizzard.tres" id="15"]
[ext_resource type="Resource" path="res://example/dynamic_wheel/upgrades/mastery magic.tres" id="16"]
[ext_resource type="Script" path="res://example/dynamic_wheel/upgrades.gd" id="17"]
[ext_resource type="PackedScene" uid="uid://vq3dxl1s5h3r" path="res://example/example_navigation.tscn" id="18"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="1" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -292.0
offset_top = -120.0
offset_right = -235.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 0
text = "Item 2"

[node name="2" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -120.0
offset_right = 54.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 0
text = "Item 2"

[node name="3" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 285.0
offset_top = -120.0
offset_right = 342.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 0
text = "Item 2"

[node name="Info" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 66.0
offset_top = -63.0
offset_right = 147.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
text = "Info"

[node name="Reset" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -109.0
offset_top = -61.0
offset_right = -1.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
text = "Reset"

[node name="Label" type="Label" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 45.0
offset_top = 123.0
offset_right = 310.0
offset_bottom = -264.0
grow_vertical = 2
script = ExtResource("17")
items_available = [ExtResource("8"), ExtResource("13"), ExtResource("11"), ExtResource("16"), ExtResource("5"), ExtResource("12"), ExtResource("1"), ExtResource("3"), ExtResource("14"), ExtResource("15"), ExtResource("9"), ExtResource("10"), ExtResource("2"), ExtResource("4"), ExtResource("6"), ExtResource("7")]

[node name="Panel" type="Panel" parent="Label"]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -588.0
offset_top = 82.0
offset_right = -221.0
offset_bottom = 108.0
grow_horizontal = 0
text = "Weights of all items (relative chance to appear):"

[node name="Label4" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1077.0
offset_top = 88.0
offset_right = -930.0
offset_bottom = 114.0
grow_horizontal = 0
text = "Upgrades selected:"

[node name="Label3" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.0
offset_top = -158.0
offset_right = 115.0
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 0
text = "Choose your upgrade!!!!!!"

[node name="Debug" type="ScrollContainer" parent="."]
modulate = Color(1, 1, 1, 0.45098)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -812.0
offset_top = 113.0
offset_bottom = -176.0
grow_horizontal = 0
grow_vertical = 2

[node name="Label" type="Label" parent="Debug"]
offset_right = 1.0
offset_bottom = 23.0

[node name="AcceptDialog" type="AcceptDialog" parent="."]
dialog_text = "Example dataset contains upgrades and weapons.
- Up to 4 weapons can be selected.
- Up to 8 copies of each weapon can be selected (4 for legendaries)
- Weapons have tag_all_copies set to false, so tags only count for one copy of a weapon

- Upgrades have a maximum copy count too.
- Upgrades don't appear if they are useless (e. g. elemental damage 
won't appear if all you have no magic spells)
- Mastery upgrades can be found if you have 3+ weapons of one type
and 4 total weapons.

- Health upgrades spawn more often if you have lots of Strength and Melee weapons (x1.5 per tag),
but less often if you have Magic upgrades (x0.8 per tag).
- 2 rare Legendary weapons can appear. Chance is higher if you level Strength or Magic.

For easier mass editing of Resources, check out my Edit Resource as Spreadsheet."

[node name="Navigation" parent="." instance=ExtResource("18")]
grow_horizontal = 2

[connection signal="pressed" from="1" to="Label" method="_on_1_pressed"]
[connection signal="pressed" from="2" to="Label" method="_on_2_pressed"]
[connection signal="pressed" from="3" to="Label" method="_on_3_pressed"]
[connection signal="pressed" from="Info" to="AcceptDialog" method="popup"]
[connection signal="pressed" from="Reset" to="Label" method="_on_reset_pressed"]
